[gd_scene load_steps=5 format=3 uid="uid://uiv2h57capds"]

[ext_resource type="PackedScene" uid="uid://smmxvk8r0kpg" path="res://addons/draw_anywhere/scenes/toolbar_button/ToolbarButton.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://c3nfcgybthrtc" path="res://addons/draw_anywhere/assets/icons/clear_icon.svg" id="2"]
[ext_resource type="Script" path="res://addons/draw_anywhere/scenes/Toolbar.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://c4ivyay5fsqui" path="res://addons/draw_anywhere/assets/icons/help_icon.svg" id="5"]

[node name="Toolbar" type="PanelContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 13
script = ExtResource("3")

[node name="HelpPopup" type="AcceptDialog" parent="."]

[node name="MC" type="MarginContainer" parent="HelpPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="RichTextLabel" type="RichTextLabel" parent="HelpPopup/MC"]
layout_mode = 2
bbcode_enabled = true
text = "Global
Ctrl + `            ==  Toggle Draw Mode
Ctrl + F1          == Toggle the toolbar

In draw mode
Left Click                 ==  Draw line
Right Click / Esc    == Exit draw mode
C                               == Clear all lines
Z                               == Clear last line
R                               == Reset the toolbar position

Limitations?
The toolbar will work everywhere except when there is a popup open eg.  in EditorSettings, in ProjectSettings, etc.
(not really a limitation since you can use the global keyboard shortcut to enable Draw mode)
"

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Top" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HelpButton" parent="MC/VB/Top" instance=ExtResource("1")]
layout_mode = 2
texture_normal = ExtResource("5")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
texture_disabled = ExtResource("5")
texture_focused = ExtResource("5")

[node name="Label" type="Label" parent="MC/VB/Top"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "Draw Anywhere"

[node name="HB" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ClearButton" parent="MC/VB/HB" instance=ExtResource("1")]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("2")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("2")
texture_disabled = ExtResource("2")
texture_focused = ExtResource("2")

[node name="DrawButton" parent="MC/VB/HB" instance=ExtResource("1")]
layout_mode = 2
size_flags_horizontal = 0

[node name="DrawSize" type="HSlider" parent="MC/VB/HB"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = 1.0
max_value = 16.0
value = 1.0
scrollable = false

[node name="DrawSizeLabel" type="Label" parent="MC/VB/HB"]
layout_mode = 2
size_flags_horizontal = 0
text = "1"

[node name="Label2" type="Label" parent="MC/VB/HB"]
layout_mode = 2
size_flags_horizontal = 0
text = "Color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="MC/VB/HB"]
layout_mode = 2
size_flags_horizontal = 0
text = "Color"
color = Color(1, 1, 1, 1)
